feat: update text:

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div id='stars2'></div>
             <div id='stars3'></div>
             <div class="text w-100 text-center">
-              <p class="tulisan-pernikahan">Pernikahan</p>
+              <p class="tulisan-pernikahan">Resepsi Pernikahan</p>
               <h1 class="coupleNameTitle"></h1>
               <p class="desc mt-5 descHero"></p>
             </div>
@@ -91,8 +91,8 @@
             <div id='stars2'></div>
             <div id='stars3'></div>
             <div class="text w-100 text-center">
-              <p class="tulisan-pernikahan">Pernikahan</p>
-              <h1>Alvin & Arini</h1>
+              <p class="tulisan-pernikahan">Resepsi Pernikahan</p>
+              <h1 class="coupleNameTitle"></h1>
               <p class="desc mt-5 descHero"></p>
             </div>
           </div>
@@ -110,8 +110,8 @@
             <div id='stars2'></div>
             <div id='stars3'></div>
             <div class="text w-100 text-center">
-              <p class="tulisan-pernikahan">Pernikahan</p>
-              <h1>Alvin & Arini</h1>
+              <p class="tulisan-pernikahan">Resepsi Pernikahan</p>
+              <h1 class="coupleNameTitle"></h1>
               <p class="desc mt-5 descHero"></p>
             </div>
           </div>
@@ -129,8 +129,8 @@
             <div id='stars2'></div>
             <div id='stars3'></div>
             <div class="text w-100 text-center">
-              <p class="tulisan-pernikahan">Pernikahan</p>
-              <h1>Alvin & Arini</h1>
+              <p class="tulisan-pernikahan">Resepsi Pernikahan</p>
+              <h1 class="coupleNameTitle"></h1>
               <p class="desc mt-5 descHero"></p>
             </div>
           </div>
@@ -156,18 +156,17 @@
               <div class="d-flex justify-content-center">
                 <img src="assets/img/DCIM/lakik.jpg" class="img-fluid foto-pasangan" alt="">
               </div>
-              <h3 class="d-flex justify-content-center mt-2 nama-pasangan">Alvin</h3>
-              <span class="d-flex justify-content-center">Alvinditya Saputra, S.Kom</span>
+              <h3 class="d-flex justify-content-center mt-2 nama-pasangan">Rinaldi</h3>
+              <span class="d-flex justify-content-center">Ade Rinaldi</span>
               <hr class="mt-3" style="max-width: 60%; margin: auto;">
               <div class="row d-flex justify-content-center">
                 <div class="col-md-6">
-                  <span class="nama-orang-tua mt-1 d-flex justify-content-center"><strong>Putra Pertama dari</strong></span>
-                  <span class="nama-orang-tua d-flex justify-content-center">Bapak Sapto</span>
+                  <span class="nama-orang-tua mt-1 d-flex justify-content-center"><strong>Putra dari</strong></span>
+                  <span class="nama-orang-tua d-flex justify-content-center">Bapak Abu Bakar Zaini</span>
                   <span class="nama-orang-tua d-flex justify-content-center">&</span>
-                  <span class="nama-orang-tua d-flex justify-content-center">Ibu Listiyoati</span>
-                  <span class="nama-orang-tua d-flex justify-content-center"><strong>Yogyakarta</strong></span>
+                  <span class="nama-orang-tua d-flex justify-content-center">Ibu Anie Sriwiyanti H</span>
                   <span class="nama-orang-tua d-flex justify-content-center">
-                    <button class="btn btn-circle btn-instagram mt-1" onclick=" window.open('https://instagram.com/piinalpin','_blank')"><i class="bi bi-instagram"></i></button>
+                    <button class="btn btn-circle btn-instagram mt-1" onclick=" window.open('https://instagram.com/rnld','_blank')"><i class="bi bi-instagram"></i></button>
                   </span>
                 </div>
               </div>
@@ -178,18 +177,17 @@
               <div class="d-flex justify-content-center">
                 <img src="assets/img/DCIM/cewek.jpg" class="img-fluid foto-pasangan" alt="">
               </div>
-              <h3 class="d-flex justify-content-center mt-2 nama-pasangan">Arini</h3>
-              <span class="d-flex justify-content-center">Arini Mauluddina, S.Kom</span>
+              <h3 class="d-flex justify-content-center mt-2 nama-pasangan">Kinari</h3>
+              <span class="d-flex justify-content-center">Kinari Nur Aulia Padma Negara</span>
               <hr class="mt-3" style="max-width: 60%; margin: auto;">
               <div class="row d-flex justify-content-center">
                 <div class="col-md-6">
-                  <span class="nama-orang-tua mt-1 d-flex justify-content-center"><strong>Putri Ketiga dari</strong></span>
-                  <span class="nama-orang-tua d-flex justify-content-center">Bapak Aries Armunanto</span>
+                  <span class="nama-orang-tua mt-1 d-flex justify-content-center"><strong>Putri dari</strong></span>
+                  <span class="nama-orang-tua d-flex justify-content-center">Bapak Sukamto</span>
                   <span class="nama-orang-tua d-flex justify-content-center">&</span>
-                  <span class="nama-orang-tua d-flex justify-content-center">Ibu Indriyati</span>
-                  <span class="nama-orang-tua d-flex justify-content-center"><strong>Cilacap</strong></span>
+                  <span class="nama-orang-tua d-flex justify-content-center">Ibu Juwita Fathonah</span>
                   <span class="nama-orang-tua d-flex justify-content-center">
-                    <button class="btn btn-circle btn-instagram mt-1" onclick=" window.open('https://instagram.com/arinimauluddina','_blank')"><i class="bi bi-instagram"></i></button>
+                    <button class="btn btn-circle btn-instagram mt-1" onclick=" window.open('https://instagram.com/kinarinapn','_blank')"><i class="bi bi-instagram"></i></button>
                   </span>
                 </div>
               </div>
@@ -379,14 +377,6 @@
 
         </div>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <video width="80%" controls>
-              <source src="assets/video/videoplayback.mp4" type="video/mp4">
-            </video>
-          </div>
-        </div>
-
       </div>
     </section><!-- End Portfolio Section -->
 
@@ -549,9 +539,9 @@
     $("#guestName").html(guestName);
     $("#waktuResepsi").html(data.session_time);
 
-    $(".descHero").html("Tanpa mengurangi rasa hormat,<br>Kami mengundang Bapak/Ibu/Saudara/i<br>Untuk hadir di acara pernikahan Putra dan Putri kami.");
-    $(".descPengantin").html("Dengan memohon rahmat dan ridha Allah SWT, perkenankan kami mengundang Bapak/Ibu/Saudara/i ke acara pernikahan Putra dan Putri kami:");
-    $(".descAcaraPernikahan").html("Dengan memohon Rahmat Allah Subhanahu wa Ta’ala dan dengan segenap kerendahan hati, perkenankanlah kami mengundang Bapak/Ibu/Saudara/i untuk hadir di acara pernikahan Putra dan Putri kami yang akan dilaksanakan pada:");
+    $(".descHero").html("Tanpa mengurangi rasa hormat,<br>Kami mengundang Bapak/Ibu/Saudara/i<br>Untuk hadir di acara resepsi pernikahan Putra dan Putri kami.");
+    $(".descPengantin").html("Dengan memohon rahmat dan ridha Allah SWT, perkenankan kami mengundang Bapak/Ibu/Saudara/i ke acara resepsi pernikahan Putra dan Putri kami:");
+    $(".descAcaraPernikahan").html("Dengan memohon Rahmat Allah Subhanahu wa Ta’ala dan dengan segenap kerendahan hati, perkenankanlah kami mengundang Bapak/Ibu/Saudara/i untuk hadir di acara resepsi pernikahan Putra dan Putri kami yang akan dilaksanakan pada:");
     $("#amplop").hide();
     $(".descDoaUcapan").html("Suatu kebahagiaan bagi kami sekeluarga apabila berkenan hadir untuk memberikan doa restu kepada Putra dan Putri kami.");
 
