feat: update gallery

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Wedding Alvin & Arini</title>
-  <meta content="Pernikahan Alvin & Arini" name="description">
-  <meta content="assets/img/DCIM/STRQ0437.jpg" property="og:image">
+  <title>Wedding Party Kinari & Rinaldi</title>
+  <meta content="Resepsi Pernikahan Kinari & Rinaldi" name="description">
+  <meta content="assets/img/DCIM/meta.jpg" property="og:image">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -46,7 +46,7 @@
       <div class="modal-body row no-gutters slider-text js-fullheight align-items-center justify-content-center">
         <div class="row text-center">
           <div class="d-flex justify-content-center">
-            <img src="assets/img/DCIM/STRQ0437.jpg" alt="" class="icon-cover-image">
+            <img src="assets/img/DCIM/foto-modal.png" alt="" class="icon-cover-image">
           </div>
           <div class="col-lg-12 mt-3">
             <h1 class="coupleNameTitle"></h1>
@@ -64,7 +64,7 @@
 </div>
 
   <div id="hero" class="home-slider owl-carousel js-fullheight">
-    <div class="slider-item js-fullheight" style="background-image:url(assets/img/DCIM/STRQ0377.jpg);">
+    <div class="slider-item js-fullheight" style="background-image:url(assets/img/DCIM/slider1.webp);">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -82,26 +82,7 @@
       </div>
     </div>
 
-    <div class="slider-item js-fullheight" style="background-image:url(assets/img/DCIM/STRQ0305.jpg);">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
-          <div class="col-md-12 ftco-animate">
-            <div id='stars'></div>
-            <div id='stars2'></div>
-            <div id='stars3'></div>
-            <div class="text w-100 text-center">
-              <p class="tulisan-pernikahan">Resepsi Pernikahan</p>
-              <h1 class="coupleNameTitle"></h1>
-              <p class="desc mt-5 descHero"></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="slider-item js-fullheight"
-        style="background-image:url(assets/img/DCIM/STRQ0346.jpg);">
+    <div class="slider-item js-fullheight" style="background-image:url(assets/img/DCIM/slider2.webp);">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -120,7 +101,7 @@
     </div>
 
     <div class="slider-item js-fullheight"
-        style="background-image:url(assets/img/DCIM/STRQ0497.jpg);">
+        style="background-image:url(assets/img/DCIM/slider3.webp);">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -154,7 +135,7 @@
           <div class="col-lg-6 kasih-spasi">
             <div class="col-md-12" data-aos="fade-left">
               <div class="d-flex justify-content-center">
-                <img src="assets/img/DCIM/lakik.jpg" class="img-fluid foto-pasangan" alt="">
+                <img src="assets/img/DCIM/pengantin-pria.png" class="img-fluid foto-pasangan" alt="">
               </div>
               <h3 class="d-flex justify-content-center mt-2 nama-pasangan">Rinaldi</h3>
               <span class="d-flex justify-content-center">Ade Rinaldi</span>
@@ -175,7 +156,7 @@
           <div class="col-lg-6 kasih-spasi">
             <div class="col-md-12" data-aos="fade-right">
               <div class="d-flex justify-content-center">
-                <img src="assets/img/DCIM/cewek.jpg" class="img-fluid foto-pasangan" alt="">
+                <img src="assets/img/DCIM/pengantin-wanita.png" class="img-fluid foto-pasangan" alt="">
               </div>
               <h3 class="d-flex justify-content-center mt-2 nama-pasangan">Kinari</h3>
               <span class="d-flex justify-content-center">Kinari Nur Aulia Padma Negara</span>
@@ -205,7 +186,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Acara Pernikahan</h2>
+          <h2>Acara Resepsi</h2>
           <p class="descAcaraPernikahan"></p>
         </div>
 
@@ -250,7 +231,7 @@
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
-            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" style="border-radius: 30px;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=1215&amp;height=400&amp;hl=en&amp;q=Jl. Jawa No.10 B, Cigobang, Gunungsimping, Kec. Cilacap Tengah, Kabupaten Cilacap, Jawa Tengah 53224&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}</style></div>
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="1215" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=Gedung%20Patra%20Graha&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>.mapouter{position:relative;text-align:right;height:400px;width:1215px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:1215px;}</style></div></div>
           </div>
           <div class="col-lg-12 d-flex justify-content-center">
             <button class="btn btn-info mt-4" id="bukaMap"><i class="bi bi-geo-alt-fill"></i> Buka Maps</button>
@@ -317,61 +298,61 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap" data-aos="zoom-in">
-              <img src="assets/img/DCIM/STRQ0341.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-1.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap" data-aos="flip-left">
-              <img src="assets/img/DCIM/STRQ0287.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-2.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap" data-aos="fade-left">
-              <img src="assets/img/DCIM/STRQ0782.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-3.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap" data-aos="flip-up">
-              <img src="assets/img/DCIM/STRQ0337.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-4.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap" data-aos="zoom-in-up">
-              <img src="assets/img/DCIM/STRQ0545.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-5.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap" data-aos="flip-right">
-              <img src="assets/img/DCIM/STRQ0644.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-6.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap" data-aos="zoom-out">
-              <img src="assets/img/DCIM/STRQ0897.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-7.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap" data-aos="fade-left">
-              <img src="assets/img/DCIM/STRQ0612.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-8.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap" data-aos="fade-down">
-              <img src="assets/img/DCIM/STRQ0372.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-9.webp" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap" data-aos="fade-down">
-              <img src="assets/img/DCIM/STRQ0641.jpg" class="img-fluid" alt="">
+              <img src="assets/img/DCIM/gallery-10.webp" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -565,7 +546,7 @@
 
   $('#bukaMap').click(function () {
     window.open(
-      'https://www.google.com/maps/place/Jl.+Jawa+No.10,+Cigobang,+Gunungsimping,+Kec.+Cilacap+Tengah,+Kabupaten+Cilacap,+Jawa+Tengah+53211/@-7.7058316,109.0246014,17z/data=!3m1!4b1!4m5!3m4!1s0x2e6512c62cc1fa8d:0xeb0f7cd578af9d93!8m2!3d-7.7058316!4d109.0246014',
+      'https://www.google.co.id/maps/place/Patra+Graha+Convention+Hall/@-7.7098387,109.003935,17z/data=!4m5!3m4!1s0x2e6512acc364eee5:0x14796f71c9c5647a!8m2!3d-7.7098387!4d109.0061237',
       '_blank'
     )
   });
@@ -676,9 +657,7 @@
             })
           } else {
             Swal.fire({
-              imageUrl: 'assets/img/swal.png',
-              imageWidth: 200,
-              imageHeight: 200,
+              icon: 'success',
               timer: 1500,
               title: 'Sukses',
               showCloseButton: false,
