--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Itim&family=Pompiere&family=Square+Peg&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Zilla+Slab&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -405,15 +405,15 @@
         <div class="row d-flex justify-content-center mt-2 protokol-kesehatan">
 
           <div class="col-md-2">
-            <img src="assets/img/use-mask.gif">
+            <img src="assets/img/mask.png">
             <p class="mt-3">Memakai Masker</p>
           </div>
           <div class="col-md-2">
-            <img src="assets/img/wash-hand.gif">
+            <img src="assets/img/wash-hand.png">
             <p class="mt-3">Mencuci Tangan</p>
           </div>
           <div class="col-md-2">
-            <img src="assets/img/handsanitizer.gif">
+            <img src="assets/img/handsanitizer.png">
             <p class="mt-3">Menggunakan Hand Sanitizer</p>
           </div>  
         </div>
@@ -429,7 +429,7 @@
       <div class="mt-3">
         Made with <i class="bi bi-heart-fill"></i> by
       </div>
-      <img src="assets/img/logo.png" alt="" style="max-width: 200px;">
+      <img src="assets/img/logo.png" alt="" style="max-width: 100px;">
       <div class="copyright">
         &copy; 2022 <strong><span>piinalpin.com</span></strong>. All Rights Reserved
       </div>
@@ -526,8 +526,8 @@
     $("#amplop").hide();
     $(".descDoaUcapan").html("Suatu kebahagiaan bagi kami sekeluarga apabila berkenan hadir untuk memberikan doa restu kepada Putra dan Putri kami.");
 
-    $('#song').html(`<source src="./assets/audio/shania-twain.mp3" type="audio/mp3">`);
-    $('#songTitle').html('Song by Shania Twain - From This Moment On');
+    $('#song').html(`<source src="./assets/audio/backsound.mp3" type="audio/mp3">`);
+    $('#songTitle').html('Song Shania Yan Cover - Nothings Gonna Change My Love For You');
 
     const greetingCardData = await greetingCardResponses;
 
