--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
 <!-- Modal -->
-<!-- <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content modal-background">
       <div class="modal-body row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
   <div id="hero" class="home-slider owl-carousel js-fullheight">
     <div class="slider-item js-fullheight" style="background-image:url(assets/img/DCIM/slider1.webp);">
