--- a/index.html
+++ b/index.html
@@ -586,10 +586,10 @@
       // If the count down is over, write some text 
       if (distance < 0) {
         clearInterval(x);
-        $("#days").html("Expired");
-        $("#hours").html("Expired");
-        $("#minutes").html("Expired");
-        $("#seconds").html("Expired");
+        $("#days").html("Exp");
+        $("#hours").html("Exp");
+        $("#minutes").html("Exp");
+        $("#seconds").html("Exp");
       }
     }, 1000);
   </script>
