--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
 <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content modal-background">
       <div class="modal-body row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
   <div id="hero" class="home-slider owl-carousel js-fullheight">
     <div class="slider-item js-fullheight" style="background-image:url(assets/img/DCIM/slider1.webp);">
@@ -136,27 +136,6 @@
 
         <div class="row">
           <div class="col-lg-6 kasih-spasi">
-            <div class="col-md-12" data-aos="fade-left">
-              <div class="d-flex justify-content-center">
-                <img src="assets/img/DCIM/pengantin-pria.png" class="img-fluid foto-pasangan" alt="">
-              </div>
-              <h3 class="d-flex justify-content-center mt-2 nama-pasangan">Rinaldi</h3>
-              <span class="d-flex justify-content-center">Ade Rinaldi</span>
-              <hr class="mt-3" style="max-width: 60%; margin: auto;">
-              <div class="row d-flex justify-content-center">
-                <div class="col-md-6">
-                  <span class="nama-orang-tua mt-1 d-flex justify-content-center"><strong>Putra dari</strong></span>
-                  <span class="nama-orang-tua d-flex justify-content-center">Bapak Abu Bakar Zaini</span>
-                  <span class="nama-orang-tua d-flex justify-content-center">&</span>
-                  <span class="nama-orang-tua d-flex justify-content-center">Ibu Anie Sriwiyanti H</span>
-                  <span class="nama-orang-tua d-flex justify-content-center">
-                    <button class="btn btn-circle btn-instagram mt-1" onclick=" window.open('https://instagram.com/rnld','_blank')"><i class="bi bi-instagram"></i></button>
-                  </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 kasih-spasi">
             <div class="col-md-12" data-aos="fade-right">
               <div class="d-flex justify-content-center">
                 <img src="assets/img/DCIM/pengantin-wanita.png" class="img-fluid foto-pasangan" alt="">
@@ -172,6 +151,27 @@
                   <span class="nama-orang-tua d-flex justify-content-center">Ibu Juwita Fathonah</span>
                   <span class="nama-orang-tua d-flex justify-content-center">
                     <button class="btn btn-circle btn-instagram mt-1" onclick=" window.open('https://instagram.com/kinarinapn','_blank')"><i class="bi bi-instagram"></i></button>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 kasih-spasi">
+            <div class="col-md-12" data-aos="fade-left">
+              <div class="d-flex justify-content-center">
+                <img src="assets/img/DCIM/pengantin-pria.png" class="img-fluid foto-pasangan" alt="">
+              </div>
+              <h3 class="d-flex justify-content-center mt-2 nama-pasangan">Rinaldi</h3>
+              <span class="d-flex justify-content-center">Ade Rinaldi</span>
+              <hr class="mt-3" style="max-width: 60%; margin: auto;">
+              <div class="row d-flex justify-content-center">
+                <div class="col-md-6">
+                  <span class="nama-orang-tua mt-1 d-flex justify-content-center"><strong>Putra dari</strong></span>
+                  <span class="nama-orang-tua d-flex justify-content-center">Bapak Abu Bakar Zaini</span>
+                  <span class="nama-orang-tua d-flex justify-content-center">&</span>
+                  <span class="nama-orang-tua d-flex justify-content-center">Ibu Anie Sriwiyanti H</span>
+                  <span class="nama-orang-tua d-flex justify-content-center">
+                    <button class="btn btn-circle btn-instagram mt-1" onclick=" window.open('https://instagram.com/rnld','_blank')"><i class="bi bi-instagram"></i></button>
                   </span>
                 </div>
               </div>
